<resources>
    <string name="app_name">Foodection</string>
    <string name="btn_splash_screen">Get Started</string>
    <string name="welcome_app_name">Foodection</string>
    <string name="welcome_slogan">Scan, Sehat, Santap</string>
    <string name="welcome_text">Create a Healthy Lifestyle with Selected Vegetables</string>
    <string name="btn_welcome_login">Login</string>
    <string name="welcome_register">Register</string>
    <string name="regis_username">Username</string>
    <string name="regis_email">Email</string>
    <string name="regis_nomor_telepon">Nomor Telepon</string>
    <string name="regis_password">Password</string>
    <string name="btn_register">Register</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_lupa_password">Lupa Password??</string>
    <string name="login_email">Email</string>
    <string name="pengguna">Pengguna</string>
    <string name="pemilik">Pemilik</string>
    <string name="profile_nama_lengkap">Nama Lengkap</string>
    <string name="heading_profile">Profile</string>
    <string name="profile_nomor_telepon">Nomor Telepon</string>
    <string name="btn_simpan">Simpan</string>
    <string name="greeting_home">Selamat Datang</string>
    <string name="home_nama_lengkap">Nama Lengkap</string>
    <string name="home_live_scan">Live Scan</string>
    <string name="home_gallery">Gallery</string>
    <string name="home_open_camera">Open Camera</string>
    <string name="home_cari_sayur">Cari Sayur</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="cari_toko">Cari Toko</string>
    <string name="detail_toko">Detail Toko</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="ulasan">Ulasan</string>
    <string name="edit_toko">Edit Toko</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="alamat">Alamat</string>
    <string name="deskripsi_toko">Deskripsi Toko</string>
    <string name="gambar_toko">Gambar Toko</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="tambah_toko">Tambah Toko</string>
    <string name="camera">Upload</string>
    <string name="detail">Detail</string>
    <string name="nama_sayur">Brocoli</string>
    <string name="kondisi">Kondisi : </string>
    <string name="hasil_kondisi">Hasil Kondisi</string>
    <string name="kandungan">Kandungan : </string>
    <string name="isi_kandungan">Hasil Kandungan</string>
    <string name="hasil_detail">Hasil Detail</string>
    <string name="cari_sayur">Cari Sayur</string>
    <string name="select_image">Select Image</string>
    <string name="predict">Predict</string>
    <string name="prediction">Prediction</string>
    <string name="marketplace">Marketplace</string>
    <string name="tambah_barang">Tambah Barang</string>
    <string name="gambar_barang">Gambar Barang</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="stok_barang">Stok Barang</string>
    <string name="nama_pemilik">Nama Pemilik</string>
    <string name="lokasi">Lokasi</string>
    <string name="stok">Stok</string>

    <string-array name="data_sayur">
        <item>Kangkung</item>
        <item>Kecambah</item>
        <item>Kentang</item>
        <item>Ketimun</item>
        <item>Kubis</item>
        <item>Jagung</item>
        <item>Jamur</item>
        <item>Lobak</item>
        <item>Paprika</item>
        <item>Wortel</item>
    </string-array>

    <string-array name="data_price">
        <item>7000</item>
        <item>8000</item>
        <item>9000</item>
        <item>3000</item>
        <item>4000</item>
        <item>6000</item>
        <item>8000</item>
        <item>4000</item>
        <item>2000</item>
        <item>1000</item>
    </string-array>

    <integer-array name="data_poto">
        <item>@drawable/kangkung</item>
        <item>@drawable/kecambah</item>
        <item>@drawable/kentang</item>
        <item>@drawable/ketimun</item>
        <item>@drawable/kubis</item>
        <item>@drawable/jagung</item>
        <item>@drawable/jamur</item>
        <item>@drawable/lobak</item>
        <item>@drawable/paprika</item>
        <item>@drawable/wortel</item>
    </integer-array>

    <string-array name="data_kandungan">
        <item>Kandungan : Vitamin C, Vitamin K, Serat, Kalium, Fosfor, Zat Besi</item>
        <item>Kandungan : Vitamin C, Vitamin K, Serat, Kalium, Fosfor, Zat Besi</item>
        <item>Kandungan : Vitamin C, Vitamin K, Serat, Kalium, Fosfor, Zat Besi</item>
        <item>Kandungan : Vitamin C, Vitamin K, Serat, Kalium, Fosfor, Zat Besi</item>
        <item>Kandungan : Vitamin C, Vitamin K, Serat, Kalium, Fosfor, Zat Besi</item>
        <item>Kandungan : Vitamin C, Vitamin K, Serat, Kalium, Fosfor, Zat Besi</item>
        <item>Kandungan : Vitamin C, Vitamin K, Serat, Kalium, Fosfor, Zat Besi</item>
        <item>Kandungan : Vitamin C, Vitamin K, Serat, Kalium, Fosfor, Zat Besi</item>
        <item>Kandungan : Vitamin C, Vitamin K, Serat, Kalium, Fosfor, Zat Besi</item>
        <item>Kandungan : Vitamin C, Vitamin K, Serat, Kalium, Fosfor, Zat Besi</item>
    </string-array>

    <string-array name="data_detail">
        <item>Kangkung adalah sayuran hijau yang sering digunakan dalam masakan Asia. Daunnya biasanya digunakan dalam berbagai hidangan, terutama tumis dan sup. Kangkung kaya akan vitamin dan mineral seperti vitamin A, vitamin C, zat besi, dan kalsium.</item>
        <item>Kecambah adalah tunas pertama dari biji-bijian yang baru berkecambah. Biasanya diambil dari kacang-kacangan, biji alfalfa, kedelai, dll. Mereka merupakan sumber nutrisi yang kaya akan vitamin, mineral, protein, dan serat</item>
        <item>Kentang adalah umbi yang sangat umum dalam masakan di seluruh dunia. Mengandung karbohidrat kompleks, serat, vitamin C, vitamin B6, potassium, dan nutrisi penting lainnya.</item>
        <item>Ketimun adalah sayuran yang tergolong ke dalam famili labu-labuan. Biasanya dikonsumsi segar sebagai sayuran mentah dalam salad. Mengandung banyak air, serat, vitamin K, dan beberapa mineral</item>
        <item>Kubis adalah jenis sayuran berdaun dan termasuk dalam keluarga kol. Tersedia dalam berbagai jenis seperti kubis hijau, kubis merah, kubis bunga, dan lainnya. Kaya akan vitamin C, vitamin K, serat, dan antioksidan.</item>
        <item>Jagung adalah biji yang tumbuh pada tanaman jagung. Dapat dikonsumsi segar atau dalam bentuk yang dimasak. Kaya akan karbohidrat, serat, vitamin C, dan beberapa mineral.</item>
        <item>Jamur adalah organisme fungi yang dapat dimakan dan hadir dalam berbagai jenis seperti jamur tiram, jamur kancing, shiitake, dan lainnya. Kaya akan protein, vitamin B, selenium, dan beberapa jenis jamur memiliki sifat antioksidan</item>
        <item>Lobak adalah sayuran berakar yang tersedia dalam berbagai warna dan bentuk. Mengandung vitamin C, serat, potassium, dan zat-zat fitokimia yang bermanfaat untuk kesehatan.</item>
        <item>Paprika adalah sayuran berupa buah dari tanaman cabai. Tersedia dalam berbagai warna seperti merah, kuning, hijau, dan lainnya. Kaya akan vitamin C, vitamin A, dan antioksidan seperti karotenoid dan flavonoid.</item>
        <item>Wortel adalah sayuran berakar yang kaya akan beta-karoten, vitamin K1, serat, potassium, dan antioksidan. Baik untuk kesehatan mata dan memiliki manfaat untuk sistem kekebalan tubuh.</item>
    </string-array>

</resources>