<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <ImageView
        android:id="@+id/dtimage"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/welcome_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nama_sayur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/nama_sayur"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/HasilKondisi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/kondisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        android:text="@string/kondisi"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/kandungan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nama_sayur" />

    <TextView
        android:id="@+id/HasilKondisi"
        android:layout_width="227dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/hasil_kondisi"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/kandungan"
        app:layout_constraintStart_toEndOf="@+id/kondisi" />

    <TextView
        android:id="@+id/kandungan"
        android:layout_width="78dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/kandungan"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/isikandungan"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/isikandungan"
        android:layout_width="258dp"
        android:layout_height="102dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="22dp"
        android:text="@string/isi_kandungan"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/detail"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/detail"
        android:layout_width="42dp"
        android:layout_height="20dp"
        android:layout_marginStart="184dp"
        android:layout_marginBottom="9dp"
        android:text="@string/detail"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/hasildetail"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hasildetail"
        android:layout_width="357dp"
        android:layout_height="179dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/hasil_detail"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>