<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="36dp"
      android:text="@string/welcome_app_name"
      android:textColor="@color/green"
      android:textSize="40sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.494"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:text="@string/welcome_slogan"
      android:textColor="@color/green"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="300dp"
      android:layout_height="250dp"
      android:layout_marginTop="45dp"
      android:src="@drawable/welcome_icon"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.492"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="262dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:text="@string/welcome_text"
      android:textAlignment="center"
      android:textColor="@color/green"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <Button
      android:id="@+id/welcome_login"
      android:layout_width="315dp"
      android:layout_height="65dp"
      android:layout_marginTop="32dp"
      android:backgroundTint="@color/green"
      android:text="@string/btn_welcome_login"
      android:textSize="26sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.531"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />


  <Button
      android:id="@+id/welcome_register"
      android:layout_width="315dp"
      android:layout_height="65dp"
      android:layout_marginTop="16dp"
      android:backgroundTint="@color/green"
      android:text="@string/btn_register"
      android:textSize="26sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.531"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/welcome_login" />

</androidx.constraintlayout.widget.ConstraintLayout>