<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="15dp"
    android:padding="5dp"
    android:layout_margin="5dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivgoodsImg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"/>
        
        <TextView
            android:id="@+id/tvgoodsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_barang"
            android:textSize="14sp"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvgoodsPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga_barang"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tvgoodsStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stok"
            android:textSize="10sp"
            android:layout_margin="5dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>